Fixes for flyway and timestamp

--- a/books/src/main/resources/application.yml
+++ b/books/src/main/resources/application.yml
@@ -17,8 +17,11 @@ spring:
       hibernate:
         format_sql: true
         jdbc.time_zone: UTC
+        default_schema: books_schema
+
   flyway:
     enabled: true
+    schemas: books_schema
   security:
     oauth2:
       resourceserver:
