--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -27,9 +27,11 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>24</java.version>
+<!--		<java.version>24</java.version>-->
 		<spring-cloud.version>2025.0.0</spring-cloud.version>
 		<otelVersion>2.11.0</otelVersion>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
